[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "CssStyleDeclaration",
  "CanvasRenderingContext2d",
  "EventTarget",
  "KeyboardEvent",
  "ImageData",
] }
console_error_panic_hook = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }